--- a/templates/schablon.html
+++ b/templates/schablon.html
@@ -72,7 +72,7 @@
         <h5>About</h5>
         <ul class="list-unstyled text-small">
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="/about">Me</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/about">Again me</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/my_cv">My CV</a></li>
         </ul>
       </div>
     </div>
