--- a/templates/schablon.html
+++ b/templates/schablon.html
@@ -49,14 +49,10 @@
         <small class="d-block mb-3 text-muted">©2023</small>
       </div>
       <div class="col-6 col-md">
-        <h5>Features</h5>
+        <h5>Articles</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/create_article">Create article</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/posts">posts (All Articles)</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
@@ -71,8 +67,8 @@
       <div class="col-6 col-md">
         <h5>About</h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/about">Me</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/my_cv">My CV</a></li>
+            <li class="mb-1"><a class="link-secondary text-decoration-none" href="/about">Me</a></li>
+            <li class="mb-1"><a class="link-secondary text-decoration-none" href="/my_cv">My CV</a></li>
         </ul>
       </div>
     </div>
